# LiteraryQA

./: .gitignore  README.md  pyproject.toml
data/annotations/: test.jsonl  validation.jsonl
data/narrativeqa/: nqa_failed_download.tsv
data/narrativeqa_clean/: narrativeqa_id_hash_map.tsv
data/predictions/: Qwen--Qwen2.5-14B-Instruct-1M.jsonl  Qwen--Qwen2.5-7B-Instruct-1M.jsonl  THUDM--glm-4-9b-chat-1m-hf.jsonl  caskcsg--Llama-3-8B-NExtLong-512K-Instruct.jsonl  claude-haiku.jsonl  gemini.jsonl  meta-llama--Llama-3.1-8B-Instruct.jsonl
literaryqa/: clean.py  download.py  ngram_metrics.py
scripts/: compute_metrics.py  download_and_clean_books.py
src/: clean_gutenberg_html.py  download_narrativeqa_html.py  logging_utils.py
