[project]
name = "literaryqa"
version = "1.0.0"
description = "Scripts for downloading and evaluating on the LiteraryQA dataset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "datasets>=4.1.1",
    "ftfy>=6.3.1",
    "html5lib>=1.1",
    "loguru>=0.7.3",
    "rouge-score>=0.1.2",
    "typed-argument-parser>=1.11.0",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["literaryqa"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.37.0",
]
